# fob

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  bootstrap  configure.in  fob.doxygen.in
CMake/: FindFreeImage.cmake
autotools/: ac_cxx_bool.m4  ac_cxx_have_std.m4  ac_cxx_have_stl.m4  ac_cxx_mutable.m4  ac_cxx_namespaces.m4  acx_pthread.m4  mdl_have_opengl.m4
docs/: clemson.html  fob.css  index.html
fob/: CMakeLists.txt  Makefile.am  fob.cpp  fob.h  mathematics.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h  vector.cpp  vector.h  wfob.cpp  wfob.h
test/: CMakeLists.txt  Makefile.am  fly.cpp  fly2.cpp
wtest/: CMakeLists.txt  SerialConnection.cpp  SerialConnection.cpp.orig  auxiliar.cpp  shader.v1.frag  shader.v1.vert
